# graisse-prompt-versioning

./: .gitignore  DESIGN.md  LICENSE  README.md  ToDo.md  pyproject.toml
example/: .gpv.example  a_intro.j2  b_body.j2
src/gpv/: __init__.py  cli.py  config.py  db.py  versioning.py
src/gpv/commands/: __init__.py  commit.py  extract.py  info.py  init.py  prompt.py  uncommit.py
tests/: __init__.py  test_commit.py  test_uncommit.py  test_utils.py  test_versioning.py
