[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graisse-prompt-versioning"
version = "0.1.0"
description = "CLI utility for versioning jinja2 sub-prompts and master prompts in SQLite"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
gpv = "gpv.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gpv"]
